@@ -1,5 +1,8 @@
 2006-09-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* UI/MainUI/SOGoUserHomePage.[hm]: made a subclass of UIxComponent
+	instead of SoComponent.
+
 	* SoObjects/Appointments/SOGoAppointmentObject.m: 
 	([SOGoAppointmentObject -viewTimeZoneForPerson:_person]): returns
 	[self serverTimeZone] instead of "EST" (which was removed).
